--- a/index.html
+++ b/index.html
@@ -252,11 +252,12 @@ main{margin:18px 0}body{margin:0;color:#fff;line-height:1.42857143;font:400 16px
 				<div itemprop="text" style="color:#000;">para bettor yang menyukai permainan judi bola online bisa langsung mendaftar menggunakan nomor rekening serta nama rekening yang benar dan bermain di dalam situs sbobet.</div>
 				</div>
 				</div>
-				<div itemprop="mainEntity" itemscope="itemscope" itemtype="https://schema.org/Question">Bagaimana Deposit Di Sbobet</center></h5>
-					<div itemprop="acceptedAnswer" itemscope="itemscope" itemtype="https://schema.org/Answer" style="font-size:12pt;padding: 8px;background: #fff;">
-						<div itemprop="text" style="color:#000;">Cara deposit di sbobet sangat mudah, karena sudah tersedia menu deposit dan menyediakan nomor rekening tujuan agar setiap pemain bisa langsung mengirimkan dana ke rekening tersebut.</div>
-						</div>
-						</div>
+				<div itemprop="mainEntity" itemscope="itemscope" itemtype="https://schema.org/Question">
+            <h5 itemprop="name" style="font-size:18pt;padding:8px;margin:10px 0 0;background:#0d10b4; color:#fff"><center>Bagaimana Deposit Di Sbobet?</center></h5>
+			<div itemprop="acceptedAnswer" itemscope="itemscope" itemtype="https://schema.org/Answer" style="font-size:12pt;padding: 8px;background: #fff;">
+				<div itemprop="text" style="color:#000;">Cara deposit di sbobet sangat mudah, karena sudah tersedia menu deposit dan menyediakan nomor rekening tujuan agar setiap pemain bisa langsung mengirimkan dana ke rekening tersebut.</div>
+				</div>
+				</div>
             </article>
 			<div class="col-lg-12 col-xs-12" style="margin:18px 0">
 				<p align="center">Copyright © 2022 <a href="#">SBOBET</a> || <a href="http://resmi.sbobet.dontkillmyapp.com">TARUHAN BOLA</a></p>
