--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ main{margin:18px 0}body{margin:0;color:#fff;line-height:1.42857143;font:400 16px
 		</table>
 	</ul>
 </div>
-<h2 align="center">LIGASLOT777 Situs Resmi Terpercaya Di Tahun 2022</h2>
+<h2 align="center">SBOBET Situs Resmi Terpercaya Di Tahun 2022</h2>
 	<p itemprop="text">sbobet merupakan salah satu tempat taruhan judi bola yang bersifat profesional karena dalam penyediaan judi bola tersebut sangat lengkap dari semua taruhan sepak bola, bola voli, bola basket, tenis, sertaa boxing di dalam penyediaan semua taruhan judi bola yang ada di dalam situs sbobet memiliki odds sangat besar yang paling banyka di cari seluruh pemain, tidak hanya memiliki odds terbesar & taruhan terlengkap tetapi sebagai taruhan judi bola profesional juga menyediakan berbagai pasaran taruhan dunia seperti HK, IND, ENG, ataupun MALAY karena semua pasaran yang ada di dalam taruhan judi bola tersebut bisa dapat langsung di pakai untuk seluruh member setia sbobet.</p>
 <p itemprop="text">sbobet juga salah satu judi bola gacor yang akurat dari segala bentuk sistem taruhan judi bola yang real untuk para pemain yang mendukung salah satu club sepak bola favorit agar bisa memenangkan sebuah pertandingan sepak bola di situs sbobet sebagai salah satu bola gacor yang akurat. Prediksi dalam sebuah filling dengan nama bola gacor di sebuah pemain juga menjadi salah satu keuntungan yang luar biasa saat melakukan taruhan judi bola, karena setiap pemain yang ingin melakukan bet judi bola harus terlebih dahulu melihat odds serta team yang kuat agar bisa memenangkan sebuah pertandingan sepak bola yang ada di dalam sbobet.</p>
 <div class="col-lg-12 col-xs-12 table-Pkvgames">
